swagger-ui, swagger-api Docker-composeへ追加
